--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib/mysql-connector-java-5.1.47.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.47.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.gson-2.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
