--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-java-5.1.47.jar-1=lib\\mysql-connector-java-5.1.47.jar
+file.reference.mysql-connector-java-5.1.47.jar-1=lib/mysql-connector-java-5.1.47.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -85,6 +85,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=sapito.war
+war.name=SAPI.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
