--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,22 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.8.5__1_.jar=lib\\gson-2.8.5 (1).jar
+file.reference.commons-beanutils-1.9.3.jar=lib\\commons-beanutils-1.9.3.jar
+file.reference.commons-collections-3.2.2.jar=lib\\commons-collections-3.2.2.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-fileupload-1.3.3.jar=lib\\commons-fileupload-1.3.3.jar
+file.reference.commons-io-2.6.jar=lib\\commons-io-2.6.jar
+file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
+file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
+file.reference.itext-2.1.7.js4.jar=lib\\itext-2.1.7.js4.jar
+file.reference.jackson-core-2.9.6.jar=lib\\jackson-core-2.9.6.jar
+file.reference.jackson-databind-2.9.6.jar=lib\\jackson-databind-2.9.6.jar
+file.reference.jasperreports-6.7.0.jar=lib\\jasperreports-6.7.0.jar
+file.reference.javax.mail-api-1.6.2.jar=lib\\javax.mail-api-1.6.2.jar
+file.reference.jcommon-1.0.24.jar=lib\\jcommon-1.0.24.jar
+file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
+file.reference.poi-3.17.jar=lib\\poi-3.17.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,8 +58,22 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.8.5__1_.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.commons-beanutils-1.9.3.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-fileupload-1.3.3.jar}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.itext-2.1.7.js4.jar}:\
+    ${file.reference.jackson-core-2.9.6.jar}:\
+    ${file.reference.jackson-databind-2.9.6.jar}:\
+    ${file.reference.jasperreports-6.7.0.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.jcommon-1.0.24.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.poi-3.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -72,7 +100,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
