--- a/src/java/mx/itesm/sapi/properties/catalogos.properties
+++ b/src/java/mx/itesm/sapi/properties/catalogos.properties
@@ -9,9 +9,30 @@ pacientePotencial = 1
 
 
 ## TipoDocumento
-EstudiosPrevios = 1
+EstudioPrevio = 1
 BiopsiaPrevia = 2
 IdentificacionOficial = 3
 ComprobanteDomicilio = 4
 ReferenciaMedico = 5
 CURP = 6
+Mastografia = 7
+Ultrasonido = 8
+
+## TipoCita
+Estudio = 1
+Consulta = 2
+Tratamiento = 3
+Preconsulta = 4
+Navegacion = 5
+Cirugia = 6
+
+## EstadoCita
+Cancelada = 1
+Expirada = 2
+Pendiente = 3
+Perdida = 4
+Aprobada = 5
+
+## ImportanciaCitas
+Importante = 1
+NoImportante = 2
