Agregar necesidades especiales, redireccionamiento para recuperar contraseña

--- a/src/java/mx/itesm/sapi/properties/catalogos.properties
+++ b/src/java/mx/itesm/sapi/properties/catalogos.properties
@@ -36,3 +36,13 @@ Aprobada = 5
 ## ImportanciaCitas
 Importante = 1
 NoImportante = 2
+
+##Sexo
+Mujer = 1
+Hombre = 2
+
+##Necesidad especial
+SillaDeRuedas = 1
+Baston = 2
+Oxigeno = 3
+Camilla = 4
