Controller del formulario de la navegadora incompleto

--- a/src/java/mx/itesm/sapi/properties/catalogos.properties
+++ b/src/java/mx/itesm/sapi/properties/catalogos.properties
@@ -46,3 +46,12 @@ SillaDeRuedas = 1
 Baston = 2
 Oxigeno = 3
 Camilla = 4
+
+#Estudio
+TrabajoSocial = 27
+Ecocardiograma = 26
+Laboratorio= 25
+ElectroDiagrama=24
+Espirometria= 23
+
+
