Construyendo registro medicos

--- a/src/java/mx/itesm/sapi/properties/catalogos.properties
+++ b/src/java/mx/itesm/sapi/properties/catalogos.properties
@@ -46,3 +46,14 @@ SillaDeRuedas = 1
 Baston = 2
 Oxigeno = 3
 Camilla = 4
+
+##Rol
+PacientePotencial = 1
+Administrador = 2
+Medico = 3
+Navegadora = 4
+PacienteEnTratamiento = 5
+
+
+##Departamento
+TumoresMamarios = 16
