Resutados usd masto tnm etapa

--- a/src/java/mx/itesm/sapi/properties/catalogos.properties
+++ b/src/java/mx/itesm/sapi/properties/catalogos.properties
@@ -48,10 +48,14 @@ Oxigeno = 3
 Camilla = 4
 
 #Estudio
-TrabajoSocial = 27
+TrabajoSocial = 22
 Ecocardiograma = 26
 Laboratorio= 25
 ElectroDiagrama=24
 Espirometria= 23
+EstudioUltrasonido = 27
+EstudioMastografia = 4
 
 
+# Lugar del cuerpo
+mama = 1
