Pantalla 5 del formulario

--- a/src/java/mx/itesm/sapi/properties/catalogos.properties
+++ b/src/java/mx/itesm/sapi/properties/catalogos.properties
@@ -59,3 +59,11 @@ EstudioMastografia = 4
 
 # Lugar del cuerpo
 mama = 1
+
+
+
+
+##TipoBiopsia
+BiopsiaBAAF = 1
+TrucutUSG = 2
+TrucutEsterotaxia = 3
