--- a/src/java/mx/itesm/sapi/properties/catalogos.properties
+++ b/src/java/mx/itesm/sapi/properties/catalogos.properties
@@ -77,3 +77,10 @@ mama = 1
 BiopsiaBAAF = 1
 TrucutUSG = 2
 TrucutEsterotaxia = 3
+
+
+
+
+##Correo electr\u00f3nico y contrase\u00f1a
+correoSapi = sapi.atencion@gmail.com
+contrase\u00f1aSapi = #Sapi2018Incan
